# speech-experiments

./: .gitignore
model-lab/: .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  ADVANCED_FEATURES_ROADMAP.md  ASR_MODEL_RESEARCH_2026-02.md  AUDIO_MODEL_AUDIT_2026.md  AUDIO_MODEL_ROADMAP_2026.md  COMMERCIALIZATION_AUDIT_MEMO_2026-02-06.md  COMPLETE_TEST_RESULTS.md  COMPREHENSIVE_AUDIO_MODEL_AUDIT_2026.md  COMPREHENSIVE_AUDIO_MODEL_ROADMAP_2026.md  DEPLOYMENT_AUDIT.md  DEPLOY_CHECKLIST.md  Dockerfile  EVALUATION_MATRIX.md  FINAL_COMPREHENSIVE_TEST_RESULTS_2026-01-08.md  FINAL_SUMMARY_4MODELS.md  MODEL_AUDIT_2026.md  MODEL_AUDIT_PROMPT.md  MODEL_ROADMAP_2026.md  MULTI_AGENT_RECONCILIATION_2026-02-06.md  Makefile  OSS_IMPLEMENTATION_ROADMAP.md  OSS_INDEX.md  OSS_QUICK_START.md  OSS_READINESS_PLAN_2026-02-06.md  OSS_ROADMAP_SUMMARY.md  OSS_STRATEGY_WITH_AI_AGENTS.md  PERFORMANCE_RESULTS.md  PRODUCTION_IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REALIGNMENT_SNAPSHOT.md  SAAS_OPERATIONAL_FEASIBILITY_AUDIT.md  SAAS_VIABILITY_TECHNICAL_ASSESSMENT.md  STREAMING_ASR_PORT_NOTES.md  SUMMARY_SESSION_RESULTS.txt  (+17 more)
model-lab/.agent/: AGENT_KICKOFF_PROMPT.txt  SESSION_CONTEXT.md  STEP1_ENV.sh
model-lab/.githooks/: pre-commit
model-lab/.github/: PULL_REQUEST_TEMPLATE.md
model-lab/bench/: runner.py
model-lab/client/: package-lock.json  package.json  vite.config.ts  vitest.config.ts
model-lab/compare/: 00_scorecard.ipynb
model-lab/config/: hf_sprint_2026q1.yaml  resource_config.ini
model-lab/data/: RECORDING_INSTRUCTIONS.md  add_conversation_tests.py  create_test_suite.py  generate_test_audio.py  model_catalog.csv  model_catalog.expanded_plus.csv  use_cases.yaml  user_templates.json
model-lab/docs/: ACCURATE_STATUS_UPDATE_FOR_CHATGPT.md  ACTUAL_TEST_RESULTS.md  ADVERSARIAL_TEST_REPORT.md  AGENTS.md  AGENTS_EXTENSIONS.md  ARCHITECTURE_FREEZE.md  ARSENAL.md  ASR_MODEL_SIZE_SUMMARY_2026-02.md  ASR_PREPROCESS_POLICY_2026-02-21.md  AUDIO_PREPROCESSING_AUDIT_2026-02-21.md  BACKUP_PROCEDURES.md  BUILDER_CONTRACT.md  CANONICAL_SETUP_COMPLETE.md  CHANGELOG.md  CHATGPT_ANALYSIS_REORGANIZATION.md  CHATGPT_PRIORITIES_IMPLEMENTED.md  CHATGPT_RESPONSE.md  CHATGPT_STATUS_UPDATE.md  CHATGPT_STATUS_UPDATE_JAN8.md  CHATGPT_STATUS_UPDATE_JAN8_FINAL.md  CHATGPT_UPDATE_REQUEST.md  CLAIMS.md  COLAB_COMPATIBILITY_ADDENDUM.md  COMPREHENSIVE_TEST_RESULTS_2026-01-08.md  CONCRETE_E2E_BASELINE_2026-02-21.md  CONVERSATION_TESTS_ADDED.md  COVERAGE.md  CURRENT_CAPABILITIES.md  CURRENT_STATUS_REPORT.md  DEBUGGING.md  DECISIONS.md  DECISION_SEMANTICS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  DIAGNOSTIC_2026-02-13.md  DISCUSSION_DECISIONS_LOG.md  ENHANCEMENT_PLAN.md  ENHANCEMENT_ROADMAP.md  ERROR_MODEL.md  ERROR_SURFACE_INVARIANTS.md  (+81 more)
model-lab/harness/: __init__.py  adhoc_dataset.py  alignment.py  asr.py  audio_io.py  chapters.py  chunking.py  contracts.py  diarization.py  env.py  errors.py  evals.py  events.py  gate.py  lfm_model.py  llm_provider.py  media_ingest.py  meeting_pack.py  metrics_alignment.py  metrics_asr.py  metrics_classify.py  metrics_diarization.py  metrics_enhance.py  metrics_entity.py  metrics_separate.py  metrics_tts.py  metrics_v2v.py  metrics_vad.py  model_card.py  nlp.py  nlp_schema.py  normalize.py  operability.py  pipeline.py  pipeline_config.py  preprocess_ops.py  prompts.py  protocol.py  registry.py  results.py  (+11 more)
model-lab/k8s/: model-lab-deployment.yaml
model-lab/monitoring/: grafana-dashboard.json  prometheus.yml
model-lab/prompts/: README.md
model-lab/runs_quarantine/: README.md  manifest.json
model-lab/scripts/: __init__.py  agent_gate.sh  audit_review.sh  audit_runs.py  bench_streaming_asr.py  check_backend.sh  ci_guardrails.sh  ci_mode_b_gate.sh  claim_leak_gate_glm_tts.sh  convert_audio.py  coverage_report.py  create_smoke_dataset.py  dedupe_citations.py  deploy.sh  deploy_api.py  dev_noreload.sh  diagnose_env.py  export_bundle.py  fix_interpreter.sh  generate_arsenal.py  generate_decisions.py  generate_large_wav.py  generate_wav.py  hf_frontier_scan.py  hf_prefetch.py  hf_sprint_plan.py  hf_sprint_report.py  (+56 more)
(+545 files in other folders)
