[project]
name = "model-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "fastapi>=0.115.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "librosa>=0.11.0",
    "liquid-audio>=1.1.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.3",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.32.0",
    "ipykernel>=7.1.0",
]
