[project]
name = "model-lab"
version = "0.1.0"
description = "Model evaluation lab for speech models - ASR, TTS, and conversation testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "fastapi>=0.115.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "librosa>=0.11.0",
    "liquid-audio>=1.1.0",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy>=2.3.3",
    "openai-whisper>=20250625",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psutil>=7.2.1",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.9",
    "requests>=2.32.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.1",
    "uvicorn[standard]>=0.32.0",
    "ipykernel>=7.1.0",
    "transformers>=4.47.0",
    "accelerate>=1.2.1",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.6",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "mypy>=1.14.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP"]
ignore = ["E501"]  # line too long handled by formatter

[tool.ruff.format]
quote-style = "double"

